--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -255,6 +255,7 @@ table tr:hover {
 }
 
 .social_icon {
+  color: black;
   background-color: #969bab;
   font-size: 22px;
   padding: 2px 8px;
@@ -306,10 +307,10 @@ table tr:hover {
   }
 
   .button {
-    width: 11vh;
+    width: 10vh;
     height: 3vh;
-    padding: 2px 5px;
-    font-size: 14px;
+    padding: 2px 4px;
+    font-size: 13px;
   }
 
   /* For Main Content */
@@ -322,7 +323,7 @@ table tr:hover {
   }
 
   article {
-    width: 42vh;
+    width: 36vh;
     height: 62vh;
     padding: 2vh;
     margin: 0 auto;
@@ -330,7 +331,7 @@ table tr:hover {
   }
 
   .player_info img {
-    height: 34vh;
+    height: 342h;
   }
 
   table {
@@ -342,26 +343,26 @@ table tr:hover {
     padding-top: 1vh 0;
     background-color: #1100ffab;
     color: white;
-    padding: 1vh;
+    padding: 0.5vh;
   }
 
   table td {
-    padding: 4px 8px;
+    padding: 2px 1px;
     font-size: 10px;
   }
 
   .palyer .player {
-    height: 4vh;
-    width: 4vh;
-    padding: 1vh;
+    height: 3vh;
+    width: 3vh;
+    padding: 1vh 0.5vh;
   }
   .palyer {
-    margin-right: 10px;
+    margin-right: 6px;
   }
 
   .palyer .flag {
-    height: 12px;
-    width: 12px;
+    height: 10px;
+    width: 10px;
   }
 
   .last_match {
