--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -181,10 +181,11 @@ hr {
 .top_players {
   text-align: center;
 }
+
 table {
   border-collapse: collapse;
   width: 75%;
-  margin: 9vh 26vh 21.5vh 24.5vh;
+  margin:9vh auto;
   box-shadow: 0px 0px 5.2vh rgba(0, 0, 0, 0.15);
 }
 
@@ -228,8 +229,9 @@ table tr:hover {
 }
 
 .last_match {
+  width: 75%;
   text-align: center;
-  margin: 9vh 26vh 21.5vh 24.5vh;
+  margin: auto;
 }
 
 .last_match img {
@@ -340,7 +342,7 @@ table tr:hover {
   }
 
   .player_info img {
-    height: 342h;
+    height: 34vh;
   }
 
   table {
@@ -376,7 +378,7 @@ table tr:hover {
 
   .last_match {
     text-align: center;
-    margin: 2vh 2vh;
+    margin: auto;
   }
 
   .last_match img {
